# CameraModel

./: .gitignore  CMakeLists.txt  README.md
calib/: cam0_tumvio_mei.yaml  cam0_tumvio_pinhole.yaml
include/: MEI_camera.hpp  abstract_camera.hpp  pinhole_camera.hpp
src/: MEI_camera.cpp  abstract_camera.cpp  pinhole_camera.cpp
test/: remove_distor.cpp  remove_distort.cpp
